--- a/public/styles/modules/intro.css
+++ b/public/styles/modules/intro.css
@@ -144,6 +144,7 @@
   transition: all 0.1s cubic-bezier(0.77, 0, 0.175, 1) 0.6s;
   padding: 0;
 }
+
 #pop-up-block svg {
   width: 20px;
 }
@@ -151,6 +152,9 @@
   stroke: white;
   stroke-width: 2px;
 }
-#pop-up-block:active {
+#pop-up-block:focus {
   outline: none;
+}
+#pop-up-block:hover {
+  transform: rotate(-15deg);
 }
